acein26 primer table in
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@10040 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/conclusion/conclusion.tex
+++ b/thesis/conclusion/conclusion.tex
@@ -14,7 +14,7 @@ In this dissertation, we described studies characterizing HIV-1 latency, express
 
 	Various treatments are now being considered for the reactivation of latent provirus \citep{Spina2013}. To further understand the mechanisms of these treatments, it would be informative to compare the features of latent provirus induced by a given treatment to latent viable provirus remaining uninduced. Repeated cell sorting and integration site sequencing might provide insight on mechanism. For example, one could first sort out cells with active provirus, then treat with the potential latency modulator and sort out cells with newly active provirus and then treat with a strong inducer or alternative stimuli and sort out cell with newly activated provirus. This would give subsets of cells where latent proviruses had been activated by treatment and cells with provirus which were not activated by treatment but still inducible. Synergies between treatments could be assessed and the location of integration sites could be determined and used to locate patterns of genomic features correlated with induction for each treatment.
 
-	Current efforts at ``shock and kill'' therapy, inducing latent virus to activate and then eliminating infected cells, focus on histone deacetylase inhibitors. If there are diverse mechanisms of latency within patients then much of the latent reservoir may remain unactivated by single-target therapies.  Clinical trials with histone deacetylase inhibitors have shown some small increases in viral RNA but little decrease in the latent reservoir of HIV \citep{Lehrman2005,Archin2010,Archin2012,Spivak2014}. It appears that the majority of viable latent provirus from patient cells are not reactivated by current therapies \citep{Cillo2014}. These results are particularly worrisome because a functional cure for HIV will likely require a greater than 10,000-fold reduction of the latent reservoir \citep{Hill2014}.
+	Current efforts at ``shock and kill'' therapy, inducing latent virus to activate and then eliminating infected cells, focus on histone deacetylase inhibitors. If there are diverse mechanisms of latency within patients then much of the latent reservoir may remain unactivated by single-target therapies.  Clinical trials with histone deacetylase inhibitors have shown some small increases in viral RNA but little decrease in the latent reservoir of HIV \citep{Lehrman2005,Archin2010,Archin2012,Spivak2014}. It appears that the majority of viable latent provirus from patient cells are not reactivated by current therapies \citep{Cillo2014}. These results are particularly worrisome because a functional cure for HIV will likely require a greater than 10,000-fold reduction of the latent reservoir \citep{Hill2014}. %[[MENTION multiple treatments moderately successful in mice in Halper-Stromberg2014} %Bullen2014 could go in Cillo2014 citation read Laird2015 for synergy ref]] %[[read Brinzevic2014]] [[dont say HIV1 came from chimps http://www.pnas.org/content/112/11/E1343.abstract]]
 
 	In Chapter \ref{chapLatency}, we used publicly available genomic data. Perhaps there is some chromosomal feature with a strong association with latency but the data is not currently available or varies greatly between cell populations. More varieties of annotations are rapidly becoming available \citep{ENCODEPC2012,Barrett2013,Karolchik2014,Goldman2015,Cunningham2015}. Decreasing sequencing costs \citep{Metzker2010,Mardis2011,Wetterstrand2015} may also make it feasible to measure more epigenetic features in the exact cell population of interest. Repeating analyses similar to Chapter \ref{chapLatency}, perhaps by simply rerunning the reproducible report in Appendix \ref{appLatencyReport} with new data, would allow any new features to be monitored for correlations with latency.
 
