--- a/thesis/lamp/lamp.tex
+++ b/thesis/lamp/lamp.tex
@@ -8,7 +8,7 @@
 
 \textBox{This chapter was originally published as:\\
 	\citeBox{Ocwieja2015}
-	KE Ocwieja and I were joint first authors. KE Ocwieja, C Liu, H Bau, FD Bushman and I conceived the experiments. KE Ocwieja and I designed the assay. KE Ocwieja, C Liu and J Song performed the experiments. KE Ocwieja, J Song and I analyzed the data. I produced the figures. KE Ocwieja, C Liu, H Bau, FD Bushman and I wrote the paper.
+	KE Ocwieja, C Liu, H Bau, FD Bushman and I conceived the experiments. KE Ocwieja and I designed the assay. KE Ocwieja, C Liu and J Song performed the experiments. KE Ocwieja, J Song and I analyzed the data. I produced the figures. KE Ocwieja, C Liu, H Bau, FD Bushman and I wrote the paper.
 	
 	Supporting information are available at \url{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0117852\#sec011}
 }
