--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -172,7 +172,7 @@
 		}
 	\end{figure}
 
-	 In HIV, splicing occurs between at least four splice donors and eight splice acceptors \citep{Stoltzfus2009}. Two splice donors, D1 and D4, are relatively strong while the remaining donors and all acceptors are fairly weak \citep{O'Reilly1995}. The weak acceptors seem balanced with Rev's nuclear export activity \ref{Kammler2006}. Several exonic splicing silencers \citep{Amendt1994,Levengood2012} and exon splicing enhancers \citep{Caputi2004,Asang2008} and a single intronic splicing silencer \citep{Tange2001} in the viral genome interact with many human splicing factors, including hnRNPs A1 \citep{Tange2001, Levengood2012} H, F, 2H9, and A2 \citep{Jablonski2008} and SR proteins SRp40\citep{Caputi2004,Tranell2010}, SRp75 \citep{Tranell2010}, ASF/SF2 \citep{Caputi2004} and SC35 \citep{Jablonski2008}, to alter viral splicing \citep{Stoltzfus2006,Stoltzfus2009}.
+	 In HIV, splicing occurs between at least four splice donors and eight splice acceptors \citep{Stoltzfus2009}. Two splice donors, D1 and D4, are relatively strong while the remaining donors and all acceptors are fairly weak \citep{O'Reilly1995}. The weak acceptors seem balanced with Rev's nuclear export activity \citep{Kammler2006}. Several exonic splicing silencers \citep{Amendt1994,Levengood2012} and exon splicing enhancers \citep{Caputi2004,Asang2008} and a single intronic splicing silencer \citep{Tange2001} in the viral genome interact with many human splicing factors, including hnRNPs A1 \citep{Tange2001, Levengood2012} H, F, 2H9, and A2 \citep{Jablonski2008} and SR proteins SRp40\citep{Caputi2004,Tranell2010}, SRp75 \citep{Tranell2010}, ASF/SF2 \citep{Caputi2004} and SC35 \citep{Jablonski2008}, to alter viral splicing \citep{Stoltzfus2006,Stoltzfus2009}.
 
 	 In Chapter \ref{chapPacBio}, we investigate viral splicing and reveal unappreciated splice sites, novel proteins and dynamic changes in viral splicing between human subjects, over time and between cell types.
 	%http://www.sciencedirect.com/science/article/pii/S0966842X04000253
