Primer table ref
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@10061 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/lamp/lamp.tex
+++ b/thesis/lamp/lamp.tex
@@ -81,7 +81,7 @@
 
 			In a second effort to increase primer affinities, we substituted locked nucleic acids (LNAs) for selected bases that were particularly highly conserved among subtypes (Figure \ref{figPrimers}, ACeIN-30, -31, -32, -33, and-34). Some improvement was shown over the non-LNA containing bases. However, the ACeIN-26 primer set was as effective as or better than any LNA containing primer sets.
 
-			In further tests, the ACeIN-26, -28 and-30 primers were tested combined with the ACePR primer set (a slightly modified version of the B-PR primer set, S2 Table, row 2, designed to accommodate a wider selection of HIV-1 subtypes) but no improvement was seen and efficiency may even have fallen for some subtypes. We also designed a primer set that matched exactly to the targeted sequences found in the problematic subtype F, and mixed this set with the ACeIN-26 primers. However, no improvement was seen (Figure \ref{figPrimers}, mixtures with F-IN set). Mixing the ACeIN-26 primers with both the ACePR and F-specific primers did yield effective primer sets (Figure \ref{figPrimers}, ACeIN-26+F-IN and ACeIN-26+F-IN+ACePR). However, amplification efficiency was not greatly improved over the ACeIN-26 primer set, so we proceeded with the simpler ACeIN-26 primer set (Figure \ref{figConsensus}B and Table \ref{primerTable}) in further studies.
+			In further tests, the ACeIN-26, -28 and-30 primers were tested combined with the ACePR primer set (a slightly modified version of the B-PR primer set, S2 Table, row 2, designed to accommodate a wider selection of HIV-1 subtypes) but no improvement was seen and efficiency may even have fallen for some subtypes. We also designed a primer set that matched exactly to the targeted sequences found in the problematic subtype F, and mixed this set with the ACeIN-26 primers. However, no improvement was seen (Figure \ref{figPrimers}, mixtures with F-IN set). Mixing the ACeIN-26 primers with both the ACePR and F-specific primers did yield effective primer sets (Figure \ref{figPrimers}, ACeIN-26+F-IN and ACeIN-26+F-IN+ACePR). However, amplification efficiency was not greatly improved over the ACeIN-26 primer set, so we proceeded with the simpler ACeIN-26 primer set (Figure \ref{figConsensus}B and Table \ref{tabLampPrimers}) in further studies.
 
 	\begin{table*}
 		\resizebox{\columnwidth}{!}{
@@ -101,7 +101,7 @@
 		\end{tabular}
 		}
 		\caption[Primer set ACeIN-26]{The primers from the ACeIN-26 primer set selected for further study}
-		\label{tabMetaSamples}
+		\label{tabLampPrimers}
 	\end{table*}
 
 
