All figure refs in
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@10062 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/appendices/pacbioReport/pacbioReport.tex
+++ b/thesis/appendices/pacbioReport/pacbioReport.tex
@@ -17,7 +17,7 @@ glm(count~offset(log(total)) + acceptor:primer + acceptor:isHos
 family = 'quasipoisson')
 \end{lstlisting}
 
-Difference between HOS and T cells may be confounded by run differences between early sequencing and later sequencing. Verification by agarose gel (Figure \ref{figJunctions}b) suggest that these differences are likely biological.
+Difference between HOS and T cells may be confounded by run differences between early sequencing and later sequencing. Verification by agarose gel (Figure \ref{figJunctions}B) suggest that these differences are likely biological.
 
 \resizebox{\columnwidth}{!}{
 \begin{tabular}{|l|S[table-format=3.0]|S[table-format=6.0]|S[table-format=3.0]|S[table-format=4.0]|S[table-format=4.2]|l|}
