--- a/thesis/pacBio/pacBio.tex
+++ b/thesis/pacBio/pacBio.tex
@@ -80,7 +80,7 @@ Several groups have demonstrated tissue- and differentiation-specific splicing o
 For studies of transcript dynamics, reads from primer pairs 1.2, 1.3 and 1.4 containing junctions between D1 or any donor and each of five mutually exclusive acceptors, A3, A4c, A4a, A4b, A5 and A5a, were collected and their ratios calculated. 
 
 \subsection{Statistical analysis}
-Statistical modeling was performed using generalized linear modeling as described in Supplementary Report S2. All analyses were performed in R 2.14.0 (R Development Core) \citep{RCoreTeam2012}. 
+Statistical modeling was performed using generalized linear modeling as described in Appendix \ref{appPacbioReport}. All analyses were performed in R 2.14.0 (R Development Core) \citep{RCoreTeam2012}. 
 
 \subsection{Data access}
 Sequence data is available in the SRA database with the following accession numbers: SRP014319.
@@ -125,7 +125,7 @@ The 1-kb transcript containing exons 1, 4 and 8c (1-4-8c, where exon 8c begins a
 \subsection{Temporal dynamics of transcript populations}
 To assess longitudinal variation, we investigated \hivEight{} transcript populations during the course of a single round of infection in HOS-CD4-CCR5 cells. A sensitive method for comparison among conditions involves quantifying utilization of six mutually exclusive splice acceptors A3, A4c, A4a, A4b, A5 and a novel acceptor just downstream of A5 termed A5a. Splicing at these acceptors determines the relative levels of messages encoding Tat and Env/Vpu in the partially spliced class and messages encoding Tat, Rev and Nef in the completely spliced class.
 
-We observed longitudinal changes in the levels of these messages in HOS cells over 12--48 h that were statistically significant ($p < 10^{-10}$; generalized linear model described in Supplementary Report S2). This pattern was especially evident in junctions involving donor 1 spliced to each of these acceptors (Figure \ref{figJunctions}A). Most dramatically, transcripts with splicing junctions between D1 and A3 (tat messages) increased with time ($p < 10^{-10}$), while D1\^{}A4b junctions (used in \textit{env}/\textit{vpu} or \textit{rev} messages) were used reciprocally less ($p < 10^{-10}$). Such kinetic changes affecting specific transcripts both with and without the Rev-response element cannot be explained by the accumulation of Rev, and they may reflect differential transcript stability or HIV-induced alterations to the host splicing machinery. Temporal changes in HOS cells were confirmed using end point RT-PCR and analysis after electrophoresis on ethidium-stained gels (Figure \ref{figJunctions}B). 
+We observed longitudinal changes in the levels of these messages in HOS cells over 12--48 h that were statistically significant ($p < 10^{-10}$; generalized linear model described in Appendix \ref{appPacbioReport}). This pattern was especially evident in junctions involving donor 1 spliced to each of these acceptors (Figure \ref{figJunctions}A). Most dramatically, transcripts with splicing junctions between D1 and A3 (tat messages) increased with time ($p < 10^{-10}$), while D1\^{}A4b junctions (used in \textit{env}/\textit{vpu} or \textit{rev} messages) were used reciprocally less ($p < 10^{-10}$). Such kinetic changes affecting specific transcripts both with and without the Rev-response element cannot be explained by the accumulation of Rev, and they may reflect differential transcript stability or HIV-induced alterations to the host splicing machinery. Temporal changes in HOS cells were confirmed using end point RT-PCR and analysis after electrophoresis on ethidium-stained gels (Figure \ref{figJunctions}B). 
 
 \begin{figure}
 	\centering
